--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     font-family: sans-serif;
     text-align: center;
     margin-top: 50px;
@@ -37,5 +37,20 @@
     width: calc(100% - 20px);
     padding: 10px;
     box-sizing: border-box;
-  }
+  } */
   
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+  
+    body {
+      font-family: Arial, sans-serif;
+    }
+  
+    .wrapper {
+      display: flex;
+      min-height: 100vh;
+      position: relative;
+    }
